--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
 version: '3.2'
 
+secrets:
+  pshtt_write_creds:
+    file: ./secrets/pshtt_write_creds.yml
+  trustymail_write_creds:
+    file: ./secrets/trustymail_write_creds.yml
+  sslyze_write_creds:
+    file: ./secrets/sslyze_write_creds.yml
+
 services:
   save:
     image: 'dhub.ncats.dhs.gov:5001/saver:latest'
+    secrets:
+      - source: pshtt_write_creds
+        target: pshtt_write_creds.yml
+      - source: trustymail_write_creds
+        target: trustymail_write_creds.yml
+      - source: sslyze_write_creds
+        target: sslyze_write_creds.yml
     volumes:
       - /tmp:/home/saver/shared
